--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,14 @@
 		<module>server</module>
 	</modules>
 
+	<dependencies>
+		<dependency>
+			<groupId>org.zalando</groupId>
+			<artifactId>logbook-spring-boot-starter</artifactId>
+			<version>3.7.2</version>
+		</dependency>
+	</dependencies>
+
 	<build>
 		<pluginManagement>
 			<plugins>
